--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
+    networks:
+      - dualstack
 
   shinobi:
     depends_on:
@@ -26,16 +28,24 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
       - ./config:/config
-      - shinobi_videos:/opt/shinobi/videos
+      - /tank/shinobi/videos:/opt/shinobi/videos
       - /dev/shm/shinobiDockerTemp:/dev/shm/streams
     ports:
       - "8080:8080"
+    env_file:
+      - ./shinobi.env
     environment:
       MYSQL_HOST: mysql
       MYSQL_DATABASE: ccio
       MYSQL_USER: shinobi_user
       MYSQL_PASSWORD: password1234
+      utcOffset: "-05:00"
+    networks:
+      - dualstack
 
 volumes:
   shinobi_mysql: {}
-  shinobi_videos: {}
+
+networks:
+  dualstack:
+    external: true
