Make the host port configurable with a variable. Fixes #4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - ./videos:/opt/shinobi/videos
       - /dev/shm/shinobiDockerTemp:/dev/shm/streams
     ports:
-      - "8080:8080"
+      - "${SHINOBI_PORT:-8080}:8080"
     environment:
       MYSQL_HOST: "mysql"
       MYSQL_DATABASE: "${MYSQL_DATABASE}"
